# chatodon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.ssl.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/account/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/message/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
backend/message/migrations/: 0001_initial.py  0002_initial.py
backend/message/services/: events.py
backend/room/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/room/migrations/: 0001_initial.py  0002_room_username_nullable.py  0003_rename_is_private_to_is_public.py
backend/room/services/: participants.py
backend/validators/: account.py
deploy/: backend.conf
frontend/: .dockerignore  .env.example  Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/composables/: account.ts  api.ts  chat.ts  events.ts  message.ts  messages.ts  rooms.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: index.vue  login.vue
frontend/app/plugins/: websocket.ts
frontend/app/stores/: account.ts  chat.ts  messages.ts  overlays.ts  rooms.ts  system.ts
frontend/app/types/: account.ts  api.d.ts  messages.d.ts  (+1 more)
ws-gateway/: .dockerignore  .env.example  Dockerfile  README.md  api.py  config.py  connection_manager.py  main.py  pyproject.toml  redis_listener.py
(+20 files in other folders)
